<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size_height"
        android:background="@color/color_bg_primary" >

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:background="@drawable/bt_search"
            android:minHeight="1sp"
            android:minWidth="1sp"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_toLeftOf="@+id/btn_back"
            android:layout_toRightOf="@+id/btn_search"
            android:singleLine="true"
            android:text="@string/title_search"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_header"
            android:visibility="visible" />

        <EditText
            android:id="@+id/ed_search"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_toLeftOf="@+id/btn_back"
            android:layout_toRightOf="@+id/btn_search"
            android:hint="@string/hint_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_size_title"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/white_close"
            android:minHeight="1sp"
            android:minWidth="1sp"
            android:onClick="onClick"
            android:visibility="gone" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/list_restaurant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_ad"
        android:layout_below="@+id/layout_header"
        android:childDivider="@color/black_deviders"
        android:divider="@color/black_deviders"
        android:dividerHeight="1sp"
        android:groupIndicator="@null"
        android:scrollbars="none" >
    </ExpandableListView>

    <TextView
        android:id="@+id/tv_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:singleLine="true"
        android:text="@string/title_result_found"
        android:textColor="@color/black_secondary_text"
        android:textSize="@dimen/text_size_title"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_ad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_ads"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >
    </RelativeLayout>

</RelativeLayout>