<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shadow"
            android:scaleX="-1" />

        <LinearLayout
            android:id="@+id/layout_main_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/color_bg_primary"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_title_menu"
                android:layout_marginTop="@dimen/menu_margin_top"
                android:background="@color/alpha_white_menu" >

                <View
                    android:id="@+id/devider"
                    android:layout_width="@dimen/small_margin"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@color/color_accent" />

                <TextView
                    android:id="@+id/tv_header_filter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_toLeftOf="@+id/devider"
                    android:gravity="right|center_vertical"
                    android:text="@string/title_filter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_header_menu" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_caption_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16sp"
                android:layout_marginTop="@dimen/margin"
                android:gravity="right|center_vertical"
                android:text="@string/info_filter"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_size_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16sp"
                android:layout_marginTop="10sp" >

                <RelativeLayout
                    android:id="@+id/layout_list_filter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/layout_back_filter" >

                    <ListView
                        android:id="@+id/list_filters"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/tv_done"
                        android:layout_marginBottom="@dimen/margin"
                        android:divider="@color/color_bg_primary"
                        android:dividerHeight="1sp"
                        android:fadingEdgeLength="0dp"
                        android:listSelector="@drawable/bg_selector"
                        android:overScrollMode="never"
                        android:scrollbars="none" >
                    </ListView>

                    <TextView
                        android:id="@+id/tv_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="80sp"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/title_done"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_title"
                        android:visibility="visible" />
                </RelativeLayout>

                <ListView
                    android:id="@+id/list_tags"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/layout_back_filter"
                    android:divider="@color/color_bg_primary"
                    android:dividerHeight="1sp"
                    android:fadingEdgeLength="0dp"
                    android:listSelector="@drawable/bg_selector"
                    android:overScrollMode="never"
                    android:scrollbars="vertical"
                    android:visibility="gone" >
                </ListView>

                <RelativeLayout
                    android:id="@+id/layout_back_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5sp" >

                    <TextView
                        android:id="@+id/tv_back_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/btn_back_filter"
                        android:text="@string/title_back"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/btn_back_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_back_normal"
                        android:minHeight="1sp"
                        android:minWidth="1sp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>